--- a/requirements.txt
+++ b/requirements.txt
@@ -33,4 +33,10 @@ seaborn>=0.11.0
 # Cython  # for pycocotools https://github.com/cocodataset/cocoapi/issues/172
 # pycocotools>=2.0  # COCO mAP
 # roboflow
-thop  # FLOPs computation
+thop~=0.0.31-2005241907
+
+yaml~=0.2.5
+flask~=2.0.2
+pymongo~=3.12.0
+pymysql~=1.0.2
+rec~=0.1.1
